Tests/VaultCoreTests/CompileFail/Fixtures/double-lock-control.swift
import VaultCore

// CONTROL: exactly one consuming lock.
func control(session: consuming UnlockSession) {
    session.lock()
}
